--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "3.4.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
+    "@capacitor/network": "^1.0.7",
     "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "1.0.7",
     "@ionic-native/media": "^5.36.0",
